--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
         <section>
             <form>
                 <label for="gold">Złote monety:<input type="number" id="gold"></label>
-                <label for="silver">Złote monety:<input type="number" id="silver"></label>
-                <label for="copper">Złote monety:<input type="number" id="copper"></label>
+                <label for="silver">Srebrne monety:<input type="number" id="silver"></label>
+                <label for="copper">Miedziane monety:<input type="number" id="copper"></label>
                 <button id="exchange">Przelicz</button>
             </form>
         </section>
