Rename Hello.ts to Setup.ts and add Exchanger.ts

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <main>
         <section>
             <form>
-                <label for="gold">Złote monety:<input type="number" id="gold"></label>
-                <label for="silver">Srebrne monety:<input type="number" id="silver"></label>
-                <label for="copper">Miedziane monety:<input type="number" id="copper"></label>
+                <label for="gold">Złote monety:<input type="number" id="gold" value="0"></label>
+                <label for="silver">Srebrne monety:<input type="number" id="silver" value="0"></label>
+                <label for="copper">Miedziane monety:<input type="number" id="copper" value="0"></label>
                 <button id="exchange">Przelicz</button>
             </form>
         </section>
@@ -22,7 +22,7 @@
             <p id="result"></p>
         </section>
     </main>
-    <script src="../src/Hello.ts"></script>
+    <script src="../src/Setup.ts"></script>
 </body>
 
 </html>
