--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         </section>
         <section>
             <img src="../img/coins.svg" alt="coins" class="image">
-            <p id="result"></p>
+            <p id="result" class="result"></p>
         </section>
     </main>
     <script src="../src/Setup.ts"></script>
